--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "moment": "^2.29.3",
     "moment-timezone": "^0.5.34",
     "react": "^18.2.0",
